--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,27 @@
 * {
-    
+    padding: 0;
+    margin: 0;
+}
+body {
+    grid-template-rows: 15vh auto 10vh;
+    grid-template-areas: "header"
+                         "main"
+                         "footer";
+}
+.header {
+    grid-area: header;
+}
+.header__logo {
+    height: 60px;
+    width: 60px;
+}
+.main {
+    grid-area: main;
+}
+footer {
+    grid-area: footer;
+}
+.footer__red {
+    height: 30px;
+    width: 30px;
 }
