--- a/css/styles.css
+++ b/css/styles.css
@@ -4,54 +4,226 @@
     box-sizing: border-box;
 }
 body {
+    width: 100vw;
+    color: bisque;
+    background-color: black;
     display: grid;
-    grid-template-rows: 10vh auto auto auto;
+    grid-template-rows: 15vh auto 10vh;
     grid-template-areas: "header"
                          "main"
                          "footer";
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 .header {
+    width: 100vw;
+    background-color: black;
     grid-area: header;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     position: sticky;
     top: 0px;
     z-index: 100;
     font-size: 1rem;
-    background-color: white;
 }
 .header__logo {
-    height: 50px;
     width: 50px;
+    height: 50px;
+    margin-right: 200px;
 }
 
 ul {
+    color: white;
     list-style: none;
+    text-decoration: none;
+}
+.header__link {
+    color: #ffffff;
+    text-decoration: none;
 }
 li {
+    text-decoration: none;
     display: inline-block;
+    padding: 5px;
+    margin: 10px;
+    border: 2px solid bisque;
+    cursor: pointer;
+    background: linear-gradient(to left, transparent 50%, rgb(24, 171, 205));
+    background-size: 200%;
+    background-position: right;
+    transition: background-position 0.2s;
+}
+li:hover {
+    background-position: left;
+    color: blue;
+    font-weight: 700;
 }
 main {
-    width: 100vh;
+    width: 100vw;
     grid-area: main;
     grid-template-rows: auto auto;
     grid-template-areas: "section1"
-                         "section2";
+                         "section2"
+                         "section3";
 }
-.section1 {
-    width: 98.9vw;
-    height: auto;
+.main__section1 {
+    width: 100vw;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     align-content: center;
     text-align: center;
     grid-area: section1;
-    background-color: rgba(247, 1, 1, 0.098);
-    margin-bottom: 10vh;
+    background-color: rgba(0, 0, 0, 0.631);
 }
-.section1__titulo {
+.main__section1__titulo {
+    font-size: 5rem;
+    margin: 30px;
+    letter-spacing: 2vw;
+}
+.main__section1__eslogan {
+    font-size: 2rem;
+    margin: 5px 5px 40px 5px;
+}
+.main__section1__reserva {
+    font-size: 3.6rem;
+    color: bisque;
+    border: 2px solid blue;
+    margin: 40px;
+    text-decoration: none;
+}
+.main__video {
+    width: 100vw;
+    height: auto;
+    padding-bottom: 5vh;
+    position: absolute;
+    top: 15vh;
+    left: 0;
+    z-index: -1;
+}
+.main__section2 {
+    width: 100vw;
+    height: auto;
+    grid-area: section2;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 1.2rem;
+    background-color: black;
+    overflow: hidden;
+}
+.main__section2__titulo {
+    font-size: 3rem;
+    padding-top: 5vh;
+}
+.main__section2__texto {
+    line-height: 1.5;
+    margin: 5px 20vw 5px 20vw;
+}
+.main__section3 {
+    height: auto;
+    grid-area: section3;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background-image: url(../assets/images/inicio.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: -100;
+}
+.main__section3__fondo {
+    background-color: rgba(0, 0, 0, 0.831);
+}
+.main__section3__2columnas {
+    display: flex;
+    justify-content: space-around;
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: 50% 50%;
+    grid-template-areas: "ubicacion servicio"   
+                         "calidad precio";
+}
+.main__section3__2columnas__subtitulo {
+    font-size: 3rem;
+    padding-top: 5vh;
+}
+.main__section3__texto__columnas {
+    margin-left: 10vw;
+    margin-right: 10vw;
+    margin-bottom: 5vh;
+    font-size: 1.5rem;
+    line-height: 1.3;
+    color: bisque;
+}
+.main__section3__2columnas__ubicacion {
+    grid-area: ubicacion;
+    margin-top: 30px;
+}
+.main__section3__2columnas__servicio {	
+    grid-area: servicio;
+    margin-top: 30px;
+}
+.main__section3__2columnas__calidad {
+    grid-area: calidad;
+    margin-top: 30px;
+}
+.main__section3__2columnas__precio {
+    grid-area: precio;
+    margin-top: 30px;
+}
+.main__imagenes {
+    width: 200px;
+    height: 200px;
+}
+footer {
+    width: 100vw;
+    height: 10vh;
+    font-size: 1.5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    grid-area: footer;
+    background-color: black;
+    
+}
+.footer__red {
+    height: 30px;
+    width: 30px;
+}
+
+/* DESKTOP FIRST */
+
+
+@media only screen and (max-width: 1200px) {
+    .header {
+        font-size: 0.8rem;
+    }
+    .header__logo {
+        height: 40px;
+        width: 40px;
+        margin-right: 200px;
+        margin-left: 20px;
+    }
+    li {
+        padding: 5px;
+        margin: 5px;
+        border: 1px solid bisque;
+    }
+    .section1 {
+        height: 60vh;
+    }
+    .section1__titulo {
     font-size: 2rem;
     margin: 30px;
     letter-spacing: 2vw;
@@ -66,69 +238,12 @@ main {
     border: 2px solid blue;
     margin: 40px;
 }
-.video {
-    width: 98.9vw;
-    height: auto;
-    padding-bottom: 5vh;
-    position: absolute;
-    top: 10vh;
-    left: 0;
-    z-index: -1;
-}
-.section2 {
-    height: auto;
-    width: 98.9vw;
-    grid-area: section2;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-size: 1.2rem;
-    background-color: rgb(139, 29, 29);
-    overflow: hidden;
-}
-.section2__titulo {
-    font-size: 1.5rem;
-    padding-top: 5vh;
-}
-.main__texto {
-        padding: 5vh 5vh 5vh 5vh;
-        line-height: 1.3;
-        margin: 5px;
-}
-.main__imagen {
-    width: 98.9vw;
-    height: auto;
-}
-.main__2columnas {
-    display: flex;
-        justify-content: space-around;
-    display: grid;
-    grid-template-rows: auto auto;
-    grid-template-columns: 35% 35%;
-    grid-template-areas: "ubicacion servicio"   
-                         "calidad precio";
-}
-.main__div__ubicacion {
-    grid-area: ubicacion;
-}
-.main__div__servicio {	
-    grid-area: servicio;
 }
 
-footer {
-    font-size: 1.1rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    grid-area: footer;
-    background-color: #64a168;
-    
+@media only screen and (max-width: 768px) {
+
 }
-.footer__red {
-    height: 30px;
-    width: 30px;
+
+@media only screen and (max-width: 480px) {
+
 }
