--- a/css/styles.css
+++ b/css/styles.css
@@ -222,12 +222,18 @@ footer {
 
 /* MAIN */
 .main_fondo {
+    overflow-x: hidden;
     background-image: linear-gradient(black, rgb(51, 50, 50));
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
 }
+
 .habit__section1 {
     height: 80vh;
     width: 100vw;
-    background-image: url(../assets/images/habitacion_fondo.jpg);
+    background-image: url(../assets/images/Imagenes_habitaciones/habitacion_fondo.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -252,16 +258,17 @@ footer {
     font-family: 'Playfair', serif;
 }
 /* HABITACIONES MAIN GENERAL */
-.habit__section {
-    margin: 50px;
-}
+
 .habit__main__subtitulo {
     font-size: 2rem;
     font-family: 'Playfair', serif;
     text-align: center;
 }
+.habit__section {
+    margin: 2%;
+}
 .imagen_habit {
-    width: 600px;
+    max-width: 100%;
     height: 300px;
 }
 .habit__section__fondo {
@@ -270,7 +277,7 @@ footer {
     background-image: linear-gradient(#DBD3D0, #BAC2DB);
     display: flex;
     justify-content: space-between;
-    align-items: center;  
+    align-items: center; 
 }
 .main__section__texto {
     font-size: 1.3rem;
@@ -330,8 +337,7 @@ footer {
     /* HABITACIONES */
     /* MAIN */
     .habit__section {
-        text-align: center;
-        margin: 50px; 
+        text-align: center; 
     }
     /* HABITACIONES MAIN GENERAL */
     .habit__main__titulo {
@@ -339,10 +345,7 @@ footer {
         font-family: 'Playfair Display', serif;
         margin-bottom: 50px;
     }
-    .imagen_habit {
-        width: 600px;
-        height: 300px;
-    }
+
     .habit__section__fondo {
         color: black;
         border: 2px solid bisque;
@@ -369,7 +372,7 @@ footer {
     /* GENERAL E INDEX */
     /* HEADER */
     .header__logo {
-        margin-left: 100px;
+        margin-left: 0;
     }
     li {
         margin: 2px;
@@ -408,10 +411,7 @@ footer {
     }
     /* HABITACIONES */
     /* MAIN */
-    .habit__section {
-        text-align: center;
-        margin: 50px; 
-    }
+
     /* HABITACIONES MAIN GENERAL */
     .habit__main__titulo {
         font-size: 4rem;
@@ -419,7 +419,7 @@ footer {
         margin-bottom: 50px;
     }
     .imagen_habit {
-        width: 600px;
+        max-width: 100%;
         height: 300px;
     }
     .habit__section__fondo {
@@ -466,17 +466,17 @@ footer {
         height: 40vh;
     }
     .habit__main__section1__titulo {
-        font-size: 2.7rem;
+        font-size: 1.7rem;
         letter-spacing: 2vw;
         margin: 10px;
     }
     .habit__main__section1_descripcion {
-        font-size: 1.2rem;
+        font-size: 1rem;
         margin: 0;
         padding: 0;
     }
     .main__section1__reserva {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         margin: 20px;
         padding: 0;
     }
@@ -523,13 +523,10 @@ footer {
     .habit__section1__fondo {
         height: 70vh;
     }
-    .habit__section {
-        margin: 50px;
-        text-align: center;
-    }
+
     .imagen_habit {
-        width: 400px;
-        height: 200px;
+        max-width: 100%;
+        height: 300px;
     }
     .habit__section__fondo {
         width: 400px;
