--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     text-decoration: none;
+    list-style: none;
 }
     
     /* GENERAL E INDEX */
@@ -41,16 +42,16 @@ nav{
 .logo{
     height: 40px;
 }
-nav ul{
+ul.header {
     float: right;
     margin-right: 20px;
 }
-nav ul li{
+ul.header li{
     display: inline-block;
     line-height: 20px;
     margin: 5px;
 }
-nav ul li a{
+ul.header li a{
     color: bisque;
     font-size: 18px;
     padding: 7px 13px;
@@ -62,7 +63,7 @@ nav ul li a{
     background-position: right;
     transition: background-position 0.2s;
 }
-li a:hover{
+ul.header li a:hover{
     background-position: left;
     font-weight: 700;
 }
@@ -79,7 +80,7 @@ li a:hover{
     display: none;
 }
 /* MAIN */
-main {
+#main__con__section {
     overflow-x: hidden;
     grid-area: main;
     grid-template-rows: auto auto;
@@ -487,7 +488,7 @@ footer {
     .checkbtn{
         display: block;
     }
-    ul{
+    ul.header {
         position: fixed;
         width: 100%;
         height: 100vh;
@@ -497,15 +498,15 @@ footer {
         text-align: center;
         transition: all 0.5s;
     }
-    nav ul li{
+    ul.header li{
         display: block;
         margin: 50px 0;
         line-height: 30px;
     }
-    nav ul li a{
+    ul.header li a{
         font-size: 20px;
     }
-    li a:hover, li a.active{
+    ul.header li a:hover, ul.header li a.active{
         background: none;
     }
     .logo {
@@ -513,6 +514,9 @@ footer {
     }
     #check:checked ~ ul{
         left:0;
+    }
+    .desactivar {
+        display: none;
     }
 }
 /* CELULAR */
@@ -576,7 +580,7 @@ footer {
 
     /* HABITACIONES */
     /* MAIN */
-    .habit__main__section1__titulo {
+   .habit__main__section1__titulo {
         font-size: 1.7rem;
         letter-spacing: 2vw;
         margin: 10px;
@@ -591,6 +595,8 @@ footer {
         margin: 20px;
         padding: 0;
     }
+
+
     .habit__section1 {
         height: 70vh;
     }
@@ -623,4 +629,260 @@ footer {
         display: flex;
         justify-content: center;
     }
+}
+
+/* ACTIVIDADES */
+
+.main__act {
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.87), rgb(0, 0, 0));
+    height: auto;
+}
+#section1__descripcion {
+    text-align: center;
+    height: 40vh;
+    background-image: url(../assets/images/Imagenes_actividades/Actividades_panoramica.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    z-index: -1;
+    color: bisque;
+}
+.sombreado {
+    height: 40vh;
+    background-color: rgba(0, 0, 0, 0.767);
+    z-index: 100;
+}
+.titulo__act {
+    font-size: 5rem; 
+    font-family: 'Playfair Display', serif;
+    letter-spacing: 2vw;
+}
+.slogan__act {
+    font-size: 2rem;
+    font-family: 'Playfair', serif;
+    margin: 5px 5px 40px 5px;
+}
+#section2__cartas {
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.card {
+    position: relative;
+    width: 300px;
+    height: 350px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 50px;
+}
+
+.card .face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    border-radius: 10px;
+    overflow: hidden;
+    transition: .5s;
+}
+
+.card .front {
+    transform: perspective(600px) rotateY(0deg);
+    box-shadow: 0 5px 10px #000;
+}
+
+.card .front img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card .front h3 {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 45px;
+    line-height: 45px;
+    color: bisque;
+    background: rgba(0,0,0,.4);
+    text-align: center;
+}
+
+.card .back {
+    
+    transform: perspective(600px) rotateY(180deg);
+    background: rgb(15, 15, 15);
+    padding: 15px;
+    color: bisque;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+    box-shadow: 0 5px 10px #000;
+}
+
+.card .back .link {
+    border-top: solid 1px #f3f3f3;
+    height: 50px;
+    line-height: 50px;
+}
+
+.card .back .link a {
+    text-decoration: none;
+    color: bisque;
+}
+
+.card .back h3 {
+    font-size: 30px;
+    margin-top: 20px;
+    letter-spacing: 2px;
+}
+
+.card .back p {
+    letter-spacing: 1px;
+} 
+
+.card:hover .front {
+    transform: perspective(600px) rotateY(180deg);
+}
+
+.card:hover .back {
+    transform: perspective(600px) rotateY(360deg);
+}
+ul li {
+    margin: 10px;
+}
+
+@media only screen and (max-width: 1200px) {
+    .titulo__act {
+        font-size: 2.8rem;
+     }
+     .slogan__act {
+        font-size: 1.5rem;
+     }
+}
+
+
+@media only screen and (max-width: 480px) {
+    .titulo__act {
+        font-size: 1.7rem;
+     }
+     .slogan__act {
+        font-size: 1.2rem;
+     }
+}
+
+
+/* RESTAURANTE */
+#main__restaurante {
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.87), rgb(0, 0, 0))
+}
+ul.menu,
+ul.menu * {
+margin: 0;
+padding: 0;
+border: 0;
+box-sizing: border-box;
+}
+ul.menu {
+text-align: center;
+margin: 10px auto;
+padding: 0;
+list-style: none;
+width: 100%;
+font-size: 18px;
+}
+ul.menu li {
+list-style: none;
+}
+ul.menu li a {
+display: block;
+padding: 10px 10px 10px 20px;
+background: black;
+color: bisque;
+border-bottom: 1px solid #000;
+border-top: 1px solid #666;
+text-decoration: none;
+box-sizing: border-box;
+}
+ul.menu li ul {
+max-height: 0;
+margin: 0;
+padding: 0;
+list-style: none;
+overflow: hidden;
+transition: .3s all ease-in;
+}
+ul.menu li li a {
+padding: 10px 10px 10px 40px;
+background: #999;
+color: #000;
+font-size: 16px;
+border: 0;
+border-bottom: 1px solid #ccc;
+}
+ul.menu li li:last-child a {
+border-bottom: 0;
+}
+ul.menu li:target ul {
+max-height: 300px;
+transition: .3s all ease-in;
+}
+ul.menu li a:hover {
+background: #666;
+color: #fff;
+}
+
+#section2__slider__contenedor {
+  width: 100%;
+  height: 800px; 
+  /* HAY QUE CAMBIAR EL HEIGHT EN EL MEDIA QUERIE PARA QUE NO SALGAN ABAJO MAS IMAGENES */
+  margin: auto;
+  overflow: hidden;
+}
+
+ul.slider{
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  height: 2700%;
+}
+
+ul.slider li {
+    list-style: none;
+    width: 100%;
+    transition: opacity .5s;
+    background:#fff;
+}
+
+.imagen__contenedor {
+  width: 100vw;
+  margin-bottom: 100%;
+  
+}
+#menu__imagen {
+  width: inherit;
+}
+ul.slider li:target {
+    opacity: 1;
+}
+
+@media only screen and (max-width: 1200px) {
+  #section2__slider__contenedor {
+    height: 600px;
+  }
+     
+}
+
+@media only screen and (max-width: 768px) {
+
+}
+
+@media only screen and (max-width: 490px) {
+
 }
